tests/machine/x/st/update_stmt.out
Object: Dictionary error: did not understand #newFrom:
MessageNotUnderstood(Exception)>>signal (ExcHandling.st:254)
Dictionary class(Object)>>doesNotUnderstand: #newFrom: (SysExcept.st:1448)
UndefinedObject>>executeStatements (../../../tests/machine/x/st/update_stmt.st:2)